--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -92,7 +92,6 @@ a:active { color: red; }
 /* -----------------------
 Layout styles
 ------------------------*/
-
 .container
 {
 	max-width: 70em;
@@ -126,11 +125,13 @@ Layout styles
 	margin-bottom: 1em;
 }
 
-
+.col1,.col2,.col3
+{
+	margin-bottom: 1em;
+}
 /* -----------------------
 Nav
 ------------------------*/
-
 .nav
 {
 	margin: 0;
@@ -250,7 +251,9 @@ color:red
 font-size:10px;
 width:25.5%;
 }
-
+p {
+  text-align: center;
+}
 /* -----------------------
 Wide styles
 ------------------------*/
@@ -276,7 +279,9 @@ Wide styles
 		margin-bottom: 1em;
 	}
 
-	.footer { padding: 2em 3em; }
+	.footer { padding: 2em 3em;
+			 color: white;
+	 }
 	
 	.nav li
 	{
@@ -291,7 +296,27 @@ Wide styles
 		border-bottom: 0;
 	}
 }
+.col1
+	{
+		float: left;
+		width: 48%;
+		margin-right: 4%;
+	}
+
+	.col2
+	{
+		float: left;
+		width: 22%;
+		margin-right: 4%;
+	}
+
+	.col3
+	{
+		float: left;
+		width: 22%;
+	}
 
 footer {
 	text-align: center;
+	color:white;
 }
