--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -92,6 +92,7 @@ a:active { color: red; }
 /* -----------------------
 Layout styles
 ------------------------*/
+
 .container
 {
 	max-width: 70em;
@@ -125,13 +126,11 @@ Layout styles
 	margin-bottom: 1em;
 }
 
-.col1,.col2,.col3
-{
-	margin-bottom: 1em;
-}
+
 /* -----------------------
 Nav
 ------------------------*/
+
 .nav
 {
 	margin: 0;
@@ -251,9 +250,7 @@ color:red
 font-size:10px;
 width:25.5%;
 }
-p {
-  text-align: center;
-}
+
 /* -----------------------
 Wide styles
 ------------------------*/
@@ -279,9 +276,7 @@ Wide styles
 		margin-bottom: 1em;
 	}
 
-	.footer { padding: 2em 3em;
-			 color: white;
-	 }
+	.footer { padding: 2em 3em; }
 	
 	.nav li
 	{
@@ -296,27 +291,7 @@ Wide styles
 		border-bottom: 0;
 	}
 }
-.col1
-	{
-		float: left;
-		width: 48%;
-		margin-right: 4%;
-	}
-
-	.col2
-	{
-		float: left;
-		width: 22%;
-		margin-right: 4%;
-	}
-
-	.col3
-	{
-		float: left;
-		width: 22%;
-	}
 
 footer {
 	text-align: center;
-	color:white;
 }
