--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -323,3 +323,12 @@ footer {
 	text-align: center;
 	color:white;
 }
+
+#customize_header{
+	width: 450px;
+	margin: 10px auto;
+}
+
+#customize_logout{
+visibility: hidden
+}
