--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -328,12 +328,21 @@ footer {
 	padding: 1em 3em;
 	background: #000;
 }
-<<<<<<< HEAD
+
 .right{
 position:static;
 right:-20%;}
-=======
+
 .copyright{
 	color: white;
 }
->>>>>>> 01f9e4a97c9b5a0e1d2afc409c6c55b3331f1e2e
+
+
+#customize_header{
+	width: 450px;
+	margin: 10px auto;
+}
+
+#customize_logout{
+visibility: hidden
+}
