--- a/assets/css/nany_registration_style.css
+++ b/assets/css/nany_registration_style.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6
 	line-height: 1.1;
 }
 
-input ,select,textarea{
+input ,textarea{
 display:block;
 border:1px solid olive;
 border-radius:5px;
@@ -30,6 +30,17 @@ padding-left:5px;
 font-size:16px;
 font-family:raleway
 }
+select{
+display:block;
+border:1px solid olive;
+border-radius:5px;
+width:26%;
+padding:10px;
+margin-top:8px;
+margin-bottom:20px;
+padding-left:5px;
+font-size:16px;
+font-family:raleway}
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
