success registration css

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -243,6 +243,10 @@ color:red
 p {
   text-align: center;
 }
+#logo{
+width: 30%;
+
+}
 /* -----------------------
 Wide styles
 ------------------------*/
