--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -236,9 +236,7 @@ color:red
 	padding-left: 5px;
 }
 
-p {
-  text-align: center;
-}
+
 #logo{
 width: 30%;
 
@@ -280,19 +278,23 @@ Wide styles
 .social_media{
 	width:4%;
 	height:4%;
+	
 }
 
 footer {
-	text-align: center;
-	padding: 1em 3em;
-	background: #000;
+	
+	padding: 0.5em 3em;
+	
+	background: #000 none repeat scroll 0% 0%;
 	color: white;
 }
 
 
 .copyright{
-	text-align: center;
 	color: white;
+	display: inline;
+	
 }
+
 
 
