--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -167,7 +167,7 @@ Nav
 
 
 a {
-	color: blue;
+	color: olive;;
 }
 
 a:hover { color: gray; }
@@ -184,7 +184,7 @@ Single styles
 .btn
 {
 	color: #fff !important;
-	background-color: royalblue;
+	background-color: olive;;
 	border-color: #222;
 	display: inline-block;
 	padding: .5em 1em;
@@ -203,7 +203,7 @@ Single styles
 .btn:hover
 {
 	color: #fff !important;
-	background-color: green;
+	background-color: gray;
 }
 span {
 color:red
@@ -218,7 +218,7 @@ color:red
 .btn:active
 {
 	color: #fff !important;
-	background-color: red;
+	background-color: gray;
 }
 
 .table
@@ -302,9 +302,10 @@ footer {
 
 
 .copyright{
-text-align:center;
+	margin: 20%;
 	color: white;
 	display: inline;
+	font-size:100%;
 	
 }
 
