--- a/assets/css/nany_registration_style.css
+++ b/assets/css/nany_registration_style.css
@@ -10,17 +10,6 @@ padding-left:5px;
 font-size:16px;
 font-family:raleway
 }
-select{
-display:block;
-border:1px solid olive;
-border-radius:5px;
-width:80%;
-padding:10px;
-margin-top:8px;
-margin-bottom:20px;
-padding-left:5px;
-font-size:16px;
-font-family:raleway}
 
 
 .patt{
@@ -34,4 +23,7 @@ input[type="checkbox"]{
 display:inline;
 width:2%;}
 
-
+.filler{
+    float: right;
+	margin-top:10%;
+}
