--- a/assets/css/pikaday.css
+++ b/assets/css/pikaday.css
@@ -169,7 +169,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 }
 
 .is-today .pika-button {
-    color: olive;
+    color: black;
     font-weight: bold;
 }
 
@@ -208,7 +208,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-button:hover {
     color: #fff;
-    background: #ffce9d;
+    background: #555555;
     box-shadow: none;
     border-radius: 3px;
 }
