--- a/assets/css/messages_style.css
+++ b/assets/css/messages_style.css
@@ -1,3 +1,74 @@
 .inner:nth-child(even){
-  background: #0000ff;
+  background: #ddded6;
+  
+ 
+}
+.inner{
+
+padding:0.5em;}
+.content{
+padding:0;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+ 
+  text-align: center;
+}
+
+.wrapper > * {
+  
+  flex: 1 100%;
+}
+.assidenav> *{
+display:flex-block;
+}
+.assidenav{
+margin-top:2em;}
+.header {
+  text-align: center;
+  padding:0.5em;
+}
+
+.main {
+  text-align: left;
+  
+		width: 0;
+		margin-right: 0;
+		margin-bottom: 0;
+
+}
+
+.aside-1 {
+  background: #555;
+  color:white;
+}
+
+@media all and (min-width: 600px) {
+  .aside {
+    flex: 1 auto;
+	margin:0;
+  }
+}
+@media all and (min-width: 800px) {
+.content{
+padding:0;
+}
+  .main {
+    flex: 3 0px;
+  }
+
+  .aside-1 {
+    order: 1;
+  }
+
+  .main {
+    order: 2;
+  }
 }
