--- a/assets/css/messages_style.css
+++ b/assets/css/messages_style.css
@@ -114,6 +114,15 @@ a.sidelink{
         -webkit-box-shadow: 1px 1px 3px #000;
         box-shadow: 1px 1px 3px #000;
     }
+    .inneruseraccepted{
+        background-color: rgba(89, 177, 62, 0.7);
+  padding: 0.2em;
+    border-radius: 0.1em;
+    color: white;
+  width: 20%;
+text-align: center;
+float: left;
+    }
 .inneraccepted{
 	background-color: rgba(89, 177, 62, 0.7);
 	padding: 0.2em;
@@ -121,16 +130,22 @@ a.sidelink{
     color: white;
 	width: 20%;
 text-align: center;
-margin:5%;
+}
+.innerrejectedinall{
+   background-color:rgba(212, 65, 65, 0.74); 
+    padding: 0.2em;
+    border-radius: 0.1em;
+    color: white;
+text-align: center; 
+float: right;
 }
 .innerrejected{
    background-color:rgba(212, 65, 65, 0.74); 
     padding: 0.2em;
     border-radius: 0.1em;
     color: white;
-	width: 20%;
 text-align: center;	
-margin:5%;
+float: left;
 }
 .innerrequired{
    background-color:rgba(62, 149, 177, 0.7);
@@ -139,7 +154,6 @@ margin:5%;
     color: white;
 	width: 20%;
 text-align: center;	
-margin:5%;
 }
 .accepted{
       float: right;
@@ -175,8 +189,9 @@ text-align: center;
     padding: 0.2em;
     border-radius: 0.1em;
     color: white;
-	width: 10%;
+	width: 70px;
 	text-align: center;
+
 }
 .radiobtn{
 
