hope it gives you hell

--- a/assets/css/messages_style.css
+++ b/assets/css/messages_style.css
@@ -178,7 +178,17 @@ text-align: center;
 	width: 10%;
 	text-align: center;
 }
-.radiobtn{
+.innervote{
+   
+    background-color: rgba(206, 156, 15, 0.7);
+    padding: 0.2em;
+    border-radius: 0.1em;
+    color: white;
+	width: 17%;
+	text-align: center;
+}
+.statbtn{
+	display:inline;
 
 }
 .star-rating {
