--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -320,3 +320,27 @@ footer {
 .buttonsRight {
 	float: right;
 }
+.btns
+{
+	color: #fff !important;
+	background-color: olive;;
+	border-color: #222;
+	display: inline-block;
+	padding: .5em 1em;
+	margin: 5px;
+	font-weight: 400;
+	line-height: 1.2;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	border: 1px solid transparent;
+	border-radius: .2em;
+	text-decoration: none;
+}
+
+.btns:hover
+{
+	color: #fff !important;
+	background-color: gray;
+}
