--- a/assets/css/nanny_calendar.css
+++ b/assets/css/nanny_calendar.css
@@ -10,6 +10,9 @@ tr.calendar-row
     height: 85px;
   
 }
+h1,h2{
+	text-align:center;
+}
 
 td.calendar-day 
 {
@@ -69,6 +72,12 @@ td.calendar-day-head
      
     border-right:1px solid BLACK; 
 }
+.booked{
+	width:100%;
+	height:78px;
+	background-color:rgba(255, 0, 0, 0.42);
+}
+
 
 div.day-number      
 { 
